lib/saluki-metrics/tests/macros/07_not_a_struct.stderr
error: expected `struct`
 --> tests/macros/07_not_a_struct.rs:4:1
  |
4 | enum Metrics {
  | ^^^^
