lib/saluki-metrics/tests/macros/07_not_a_struct.rs
use saluki_metrics::static_metrics;

#[static_metrics(prefix = "nope")]
enum Metrics {
    A,
}

fn main() {}
